--- a/websandbox/index.html
+++ b/websandbox/index.html
@@ -1,10 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" src="./index.css"/>
+    <link rel="stylesheet" href="./index.css" />
     <title>Vite + React + TS</title>
   </head>
   <body>
