--- a/websandbox/index.html
+++ b/websandbox/index.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <meta property="og:type" content="" />
+    <meta property="og:title" content="Websandbox" />
+    <meta property="og:url" content="/" />
+    <meta property="og:image" content="/social.png" />
+    <meta
+      property="og:description"
+      content="Online webprogramming sandbox with editor and live reloading"
+    />
+
     <title>WebSandBox | Home</title>
   </head>
   <body>
