Minor Code changes

--- a/websandbox/index.html
+++ b/websandbox/index.html
@@ -7,8 +7,11 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta property="og:type" content="" />
     <meta property="og:title" content="Websandbox" />
-    <meta property="og:url" content="/" />
-    <meta property="og:image" content="/social.png" />
+    <meta property="og:url" content="https://websandboxx.netlify.app" />
+    <meta
+      property="og:image"
+      content="https://websandboxx.netlify.app/social.png"
+    />
     <meta
       property="og:description"
       content="Online webprogramming sandbox with editor and live reloading"
